Source/InWorldz.Phlox/grammar/generated/AssemblerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/legion-grid-source/OpenSim/Addons/Phlox/grammar/Assembler.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class AssemblerParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, STATE_ID=11, VECTOR=12, ROTATION=13, REG=14, ID=15, FUNC=16, 
		INT=17, STRING=18, FLOAT=19, WS=20, NEWLINE=21;
	public const int
		RULE_program = 0, RULE_globals = 1, RULE_functionDeclaration = 2, RULE_eventHandlerDecl = 3, 
		RULE_stateDecl = 4, RULE_instr = 5, RULE_operand = 6, RULE_label_ = 7;
	public static readonly string[] ruleNames = {
		"program", "globals", "functionDeclaration", "eventHandlerDecl", "stateDecl", 
		"instr", "operand", "label_"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.globals'", "'.def'", "':'", "'args'", "'='", "','", "'locals'", 
		"'.evt'", "'/'", "'.statedef'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "STATE_ID", 
		"VECTOR", "ROTATION", "REG", "ID", "FUNC", "INT", "STRING", "FLOAT", "WS", 
		"NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Assembler.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static AssemblerParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


	    private BytecodeGenerator _bytecodeGen;

	    public void SetGenerator(BytecodeGenerator bcg) { _bytecodeGen = bcg; }

	    protected void Gen(Antlr4.Runtime.IToken instrToken)
	        { _bytecodeGen.Gen(instrToken); }

	    protected void Gen(Antlr4.Runtime.IToken instrToken, Antlr4.Runtime.IToken operandToken)
	        { _bytecodeGen.Gen(instrToken, operandToken); }

	    protected void Gen(Antlr4.Runtime.IToken instrToken, Antlr4.Runtime.IToken oToken1, Antlr4.Runtime.IToken oToken2)
	        { _bytecodeGen.Gen(instrToken, oToken1, oToken2); }

	    protected void Gen(Antlr4.Runtime.IToken instrToken, Antlr4.Runtime.IToken oToken1, Antlr4.Runtime.IToken oToken2, Antlr4.Runtime.IToken oToken3)
	        { _bytecodeGen.Gen(instrToken, oToken1, oToken2, oToken3); }

	    protected void CheckForUnresolvedReferences()
	        { _bytecodeGen.CheckForUnresolvedReferences(); }

	    protected void DefineFunction(Antlr4.Runtime.IToken idToken, int nargs, int nlocals)
	        { _bytecodeGen.DefineFunction(idToken, nargs, nlocals); }

	    protected void DefineEventHandler(Antlr4.Runtime.IToken stateIdToken, Antlr4.Runtime.IToken idToken, int nargs, int nlocals)
	        { _bytecodeGen.DefineEventHandler(stateIdToken, idToken, nargs, nlocals); }

	    protected void DefineDataSize(int n)
	        { _bytecodeGen.DefineDataSize(n); }

	    protected void DefineLabel(Antlr4.Runtime.IToken idToken)
	        { _bytecodeGen.DefineLabel(idToken); }

	    protected void DefineState(Antlr4.Runtime.IToken stateId)
	        { _bytecodeGen.DefineState(stateId); }

		public AssemblerParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AssemblerParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GlobalsContext globals() {
			return GetRuleContext<GlobalsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext[] functionDeclaration() {
			return GetRuleContexts<FunctionDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration(int i) {
			return GetRuleContext<FunctionDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventHandlerDeclContext[] eventHandlerDecl() {
			return GetRuleContexts<EventHandlerDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventHandlerDeclContext eventHandlerDecl(int i) {
			return GetRuleContext<EventHandlerDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StateDeclContext[] stateDecl() {
			return GetRuleContexts<StateDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StateDeclContext stateDecl(int i) {
			return GetRuleContext<StateDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstrContext[] instr() {
			return GetRuleContexts<InstrContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstrContext instr(int i) {
			return GetRuleContext<InstrContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Label_Context[] label_() {
			return GetRuleContexts<Label_Context>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Label_Context label_(int i) {
			return GetRuleContext<Label_Context>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(AssemblerParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(AssemblerParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 17;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 16;
				globals();
				}
				break;
			}
			State = 25;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 25;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 19;
					functionDeclaration();
					}
					break;
				case 2:
					{
					State = 20;
					eventHandlerDecl();
					}
					break;
				case 3:
					{
					State = 21;
					stateDecl();
					}
					break;
				case 4:
					{
					State = 22;
					instr();
					}
					break;
				case 5:
					{
					State = 23;
					label_();
					}
					break;
				case 6:
					{
					State = 24;
					Match(NEWLINE);
					}
					break;
				}
				}
				State = 27;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2131204L) != 0) );
			 CheckForUnresolvedReferences(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalsContext : ParserRuleContext {
		public IToken _INT;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(AssemblerParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(AssemblerParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(AssemblerParser.NEWLINE, i);
		}
		public GlobalsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globals; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterGlobals(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitGlobals(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobals(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalsContext globals() {
		GlobalsContext _localctx = new GlobalsContext(Context, State);
		EnterRule(_localctx, 2, RULE_globals);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NEWLINE) {
				{
				{
				State = 31;
				Match(NEWLINE);
				}
				}
				State = 36;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 37;
			Match(T__0);
			State = 38;
			_localctx._INT = Match(INT);
			State = 39;
			Match(NEWLINE);
			 DefineDataSize(int.Parse((_localctx._INT!=null?_localctx._INT.Text:null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		public IToken name;
		public IToken a;
		public IToken lo;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(AssemblerParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AssemblerParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INT() { return GetTokens(AssemblerParser.INT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT(int i) {
			return GetToken(AssemblerParser.INT, i);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_functionDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			Match(T__1);
			State = 43;
			_localctx.name = Match(ID);
			State = 44;
			Match(T__2);
			State = 45;
			Match(T__3);
			State = 46;
			Match(T__4);
			State = 47;
			_localctx.a = Match(INT);
			State = 48;
			Match(T__5);
			State = 49;
			Match(T__6);
			State = 50;
			Match(T__4);
			State = 51;
			_localctx.lo = Match(INT);
			State = 52;
			Match(NEWLINE);
			 DefineFunction(_localctx.name, int.Parse((_localctx.a!=null?_localctx.a.Text:null)), int.Parse((_localctx.lo!=null?_localctx.lo.Text:null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventHandlerDeclContext : ParserRuleContext {
		public IToken state;
		public IToken name;
		public IToken a;
		public IToken lo;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(AssemblerParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(AssemblerParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(AssemblerParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INT() { return GetTokens(AssemblerParser.INT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT(int i) {
			return GetToken(AssemblerParser.INT, i);
		}
		public EventHandlerDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventHandlerDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterEventHandlerDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitEventHandlerDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventHandlerDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventHandlerDeclContext eventHandlerDecl() {
		EventHandlerDeclContext _localctx = new EventHandlerDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_eventHandlerDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			Match(T__7);
			State = 56;
			_localctx.state = Match(ID);
			State = 57;
			Match(T__8);
			State = 58;
			_localctx.name = Match(ID);
			State = 59;
			Match(T__2);
			State = 60;
			Match(T__3);
			State = 61;
			Match(T__4);
			State = 62;
			_localctx.a = Match(INT);
			State = 63;
			Match(T__5);
			State = 64;
			Match(T__6);
			State = 65;
			Match(T__4);
			State = 66;
			_localctx.lo = Match(INT);
			State = 67;
			Match(NEWLINE);
			 DefineEventHandler(_localctx.state, _localctx.name, int.Parse((_localctx.a!=null?_localctx.a.Text:null)), int.Parse((_localctx.lo!=null?_localctx.lo.Text:null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateDeclContext : ParserRuleContext {
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(AssemblerParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AssemblerParser.ID, 0); }
		public StateDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterStateDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitStateDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateDeclContext stateDecl() {
		StateDeclContext _localctx = new StateDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_stateDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			Match(T__9);
			State = 71;
			_localctx.name = Match(ID);
			State = 72;
			Match(NEWLINE);
			 DefineState(_localctx.name); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstrContext : ParserRuleContext {
		public IToken _ID;
		public OperandContext _operand;
		public OperandContext a;
		public OperandContext b;
		public OperandContext c;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AssemblerParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(AssemblerParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public InstrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterInstr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitInstr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstrContext instr() {
		InstrContext _localctx = new InstrContext(Context, State);
		EnterRule(_localctx, 10, RULE_instr);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				_localctx._ID = Match(ID);
				State = 76;
				Match(NEWLINE);
				 Gen(_localctx._ID); 
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				_localctx._ID = Match(ID);
				State = 79;
				_localctx._operand = operand();
				State = 80;
				Match(NEWLINE);
				 Gen(_localctx._ID, (_localctx._operand!=null?(_localctx._operand.Start):null)); 
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 83;
				_localctx._ID = Match(ID);
				State = 84;
				_localctx.a = operand();
				State = 85;
				Match(T__5);
				State = 86;
				_localctx.b = operand();
				State = 87;
				Match(NEWLINE);
				 Gen(_localctx._ID, (_localctx.a!=null?(_localctx.a.Start):null), (_localctx.b!=null?(_localctx.b.Start):null)); 
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 90;
				_localctx._ID = Match(ID);
				State = 91;
				_localctx.a = operand();
				State = 92;
				Match(T__5);
				State = 93;
				_localctx.b = operand();
				State = 94;
				Match(T__5);
				State = 95;
				_localctx.c = operand();
				State = 96;
				Match(NEWLINE);
				 Gen(_localctx._ID, (_localctx.a!=null?(_localctx.a.Start):null), (_localctx.b!=null?(_localctx.b.Start):null), (_localctx.c!=null?(_localctx.c.Start):null)); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AssemblerParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REG() { return GetToken(AssemblerParser.REG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNC() { return GetToken(AssemblerParser.FUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(AssemblerParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(AssemblerParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VECTOR() { return GetToken(AssemblerParser.VECTOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ROTATION() { return GetToken(AssemblerParser.ROTATION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(AssemblerParser.FLOAT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATE_ID() { return GetToken(AssemblerParser.STATE_ID, 0); }
		public OperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperandContext operand() {
		OperandContext _localctx = new OperandContext(Context, State);
		EnterRule(_localctx, 12, RULE_operand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1046528L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Label_Context : ParserRuleContext {
		public IToken _ID;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AssemblerParser.ID, 0); }
		public Label_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label_; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.EnterLabel_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAssemblerListener typedListener = listener as IAssemblerListener;
			if (typedListener != null) typedListener.ExitLabel_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAssemblerVisitor<TResult> typedVisitor = visitor as IAssemblerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel_(this);
			else return visitor.VisitChildren(this);
		}
	}
